--- a/main.css
+++ b/main.css
@@ -150,7 +150,7 @@ button:hover {
 }
 
 /* ============================= */
-/* Responsividade */
+/* Responsividade telas menores que 768px */
 /* ============================= */
 
 @media screen and (max-width: 768px) {
